<resources>
    <string name="app_name">FirebaseAuthentication</string>
    <string name="no_data">Not Signed In</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="register">Register</string>
    <string name="login">Login</string>

    <string name="dont_have_account">Dont have An Account?</string>
    <string name="already_have_account">Already have An Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>

</resources>